make span writer title

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       />
     </header>
     <main class="galery">
-      <div class="videos">
+      <section class="videos">
         <iframe
           class="videos__item"
           src="https://www.youtube.com/embed/emJtX0tX5AY"
@@ -44,7 +44,37 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
-      </div>
+      </section>
+      <section class="comments">
+        <div class="comments__card">
+          <span class="comments__card_writer">יאיר דלאל כתב:</span>
+          הזמרת סוזאן שהרבני הלא היא אימן הלכה לעולמה,זמרת נפלאה ,אישה אצילית
+          ,נפש נדירה ,אשר הרטיטה לבבות בקולה ובשירתה .אימן היקרה קולך ימשיך
+          להדהד ולהרטיט לבבות ,ואצילותך תשרה עלינו הרבה אור לעוד הרבה שנים...
+          תהיינה נפשך ושירתך צרורה בצרור החיים ותמיד נזכור את קולך המהמם.
+        </div>
+        <div class="comments__card">
+          יאיר דלאל כתב: הזמרת סוזאן שהרבני הלא היא אימן הלכה לעולמה,זמרת נפלאה
+          ,אישה אצילית ,נפש נדירה ,אשר הרטיטה לבבות בקולה ובשירתה .אימן היקרה
+          קולך ימשיך להדהד ולהרטיט לבבות ,ואצילותך תשרה עלינו הרבה אור לעוד הרבה
+          שנים... תהיינה נפשך ושירתך צרורה בצרור החיים ותמיד נזכור את קולך
+          המהמם.
+        </div>
+        <div class="comments__card">
+          יאיר דלאל כתב: הזמרת סוזאן שהרבני הלא היא אימן הלכה לעולמה,זמרת נפלאה
+          ,אישה אצילית ,נפש נדירה ,אשר הרטיטה לבבות בקולה ובשירתה .אימן היקרה
+          קולך ימשיך להדהד ולהרטיט לבבות ,ואצילותך תשרה עלינו הרבה אור לעוד הרבה
+          שנים... תהיינה נפשך ושירתך צרורה בצרור החיים ותמיד נזכור את קולך
+          המהמם.
+        </div>
+        <div class="comments__card">
+          יאיר דלאל כתב: הזמרת סוזאן שהרבני הלא היא אימן הלכה לעולמה,זמרת נפלאה
+          ,אישה אצילית ,נפש נדירה ,אשר הרטיטה לבבות בקולה ובשירתה .אימן היקרה
+          קולך ימשיך להדהד ולהרטיט לבבות ,ואצילותך תשרה עלינו הרבה אור לעוד הרבה
+          שנים... תהיינה נפשך ושירתך צרורה בצרור החיים ותמיד נזכור את קולך
+          המהמם.
+        </div>
+      </section>
     </main>
   </body>
 </html>
