feat:make shadow for comments

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </section>
       <section class="comments">
         <div class="comments__card">
-          <span class="comments__card_writer">יאיר דלאל כתב:</span>
+          <span class="comments__card_type_title">יאיר דלאל כתב:</span>
           הזמרת סוזאן שהרבני הלא היא אימן הלכה לעולמה,זמרת נפלאה ,אישה אצילית
           ,נפש נדירה ,אשר הרטיטה לבבות בקולה ובשירתה .אימן היקרה קולך ימשיך
           להדהד ולהרטיט לבבות ,ואצילותך תשרה עלינו הרבה אור לעוד הרבה שנים...
